# datasetter

./: .env  .env.example  .gitignore  config.toml  errors.py  pyproject.toml  utils.py
src/: #cli.py#  .#cli.py  cli.py  config.py  scraper.py  upload.py
src/pinterest_crawler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
